--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "grunt": "~0.4.5",
     "grunt-contrib-uglify": "~0.4.0",
     "grunt-contrib-concat": "~0.4.0",
-    "grunt-contrib-watch": "~0.6.1"
+    "grunt-contrib-watch": "~0.6.1",
+    "grunt-contrib-copy": "~0.5.0"
   }
 }
